# bricks-ai

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  MY-WORKFLOW.md  PROGRESS.md  README.md  check_models.py  findings.md  llms-full.txt  llms.txt  pyproject.toml  release-please-config.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.missions/: MISSION_024.md  MISSION_025.md
benchmark/: ai_generator.py  run_benchmark.py  runner.py
benchmark/mcp/: agent_runner.py
benchmark/mcp/scenarios/: __init__.py  a2_complexity.py  c2_reuse.py  d2_determinism.py
benchmark/showcase/: README.md  live.py  result_writer.py  run.py
benchmark/showcase/bricks/: __init__.py  math_bricks.py  string_bricks.py
benchmark/showcase/scenarios/: complexity_curve.py  determinism.py  session_cache.py
benchmark/tests/: test_apples.py
benchmarks/: dsl_vs_yaml.py
benchmarks/results/: dsl_benchmark_20260407.md
blueprints/: crm_hallucination.yaml  crm_pipeline.yaml  crm_reuse.yaml
bricks/: __init__.py  api.py  errors.py
bricks/ai/: __init__.py  composer.py
bricks/boot/: bootstrapper.py
bricks/cli/: main.py
bricks/core/: __init__.py  brick.py  config.py  engine.py  exceptions.py  loader.py  models.py  schema.py  validation.py
bricks/llm/: __init__.py  base.py  litellm_provider.py
bricks/orchestrator/: input_mapper.py  runtime.py
bricks/selector/: __init__.py  base.py  embedding_tier.py  keyword_tier.py  selector.py
bricks/skills/: AGENT_PROMPT.md
bricks/store/: blueprint_store.py
docs/: BRICK_CATALOG.md
docs/playground/: design.md
examples/: README.md  agent.yaml  ai_composer.py  basic_usage.py  class_based_brick.py  skill.md  sub_blueprint.py  yaml_blueprint.py
examples/basics/: 01_hello_brick.py  02_class_based_brick.py  03_yaml_blueprint.py  04_nested_blueprints.py  05_discovery.py  06_skill_config.py  07_python_dsl.py
examples/blueprints/: power_cycle_test.yaml
examples/end_to_end/: crm_pipeline.py  crm_pipeline_dsl.py  langchain_tool.py  quickstart.py  ticket_pipeline.py
examples/end_to_end/mcp_server/: README.md  mcp_config.json
runs/playground-replay/: _summary_native.json  native-crm_pipeline.json  native-cross_dataset_join.json  native-custom_example.json  native-ticket_pipeline.json  replay_native.py
src/bricks/: BRICK_STYLE_GUIDE.md  __init__.py  api.py  compat.py  packs.py
src/bricks/ai/: composer.py  healing.py
src/bricks/benchmark/: ai_generator.py  domain_bricks.py  report.py  run_benchmark.py  runner.py  token_counter.py
src/bricks/benchmark/showcase/: BENCHMARK_DESIGN.md  README.md  __init__.py  crm_scenario.py  engine.py  formatters.py  metadata.py  registry_factory.py  result_writer.py  run.py  scenario_runner.py  ticket_generator.py  ticket_scenario.py
src/bricks/benchmark/tests/: test_benchmark.py  test_engine.py  test_enums.py  test_formatters.py  test_pipeline_fixes.py  (+7 more)
src/bricks/boot/: __init__.py  bootstrapper.py  config.py
src/bricks/cli/: __init__.py  check_env.py  main.py
src/bricks/core/: __init__.py  builtins.py  catalog.py  constants.py  context.py  dag.py  discovery.py  dsl.py  engine.py  filtering_selector.py  hooks.py  registry.py  resolver.py  schema.py  selector.py  utils.py
src/bricks/demo/: __init__.py  data.py  printer.py  runner.py
src/bricks/llm/: base.py  litellm_provider.py
src/bricks/mcp/: __init__.py  server.py
src/bricks/orchestrator/: __init__.py  runtime.py
src/bricks/playground/: __init__.py  provider_factory.py  report.py  run_benchmark.py  runner.py  scenarios.py  token_counter.py
src/bricks/providers/: __init__.py
src/bricks/skills/: AGENT_PROMPT.md
src/bricks/stdlib/: __init__.py  encoding_security.py  math_numeric.py  string_processing.py  validation.py
src/bricks/store/: __init__.py  models.py
tests/: conftest.py  test_api.py  test_default_registry_includes_builtins.py  test_smoke.py
tests/ai/: test_composer.py  test_composer_dsl.py  test_composer_error_surfaces_code.py  test_composer_examples.py  test_composer_examples_execute.py  test_composer_runtime_retry.py  test_healer_contract.py  test_healing.py
tests/boot/: test_bootstrapper.py
tests/cli/: test_main.py  test_store_seed.py
tests/core/: test_brick.py  test_builtin_error_attribution.py  test_builtins.py  test_catalog.py  test_config.py  test_context.py  test_dag.py  test_dag_execution.py  test_dag_symmetry.py  test_discovery.py  test_dsl.py  test_dsl_primitives.py  test_engine.py  test_engine_attribution.py  test_exceptions.py  test_filtering_selector.py  test_flow.py  test_flow_input_binding.py  test_for_each_extractor_error_message.py  test_for_each_item_subscript.py  test_for_each_static_kwargs.py  test_guard.py  test_hooks.py  test_inputs_declaration.py  test_loader.py  test_models.py  test_registry.py  test_resolver.py  test_schema.py  test_selector.py  test_sub_blueprint.py  test_teardown.py  test_validation.py  test_verbosity.py
tests/demo/: test_demo.py
tests/integration/: test_cli_integration.py  test_dsl_integration.py  test_full_pipeline.py  test_showcase_cached.py
tests/integration/fixtures/: crm_pipeline_happy.json  crm_pipeline_heal.json
tests/live/: test_compose_live.py  test_execute_live.py  test_failure_paths.py
tests/llm/: test_litellm_caching.py  test_provider.py
tests/mcp/: test_server.py
tests/orchestrator/: test_input_mapper.py  test_runtime.py
tests/playground/: test_cli_run.py  test_endpoints.py  test_provider_factory.py  test_providers.py  test_run_stream.py
tests/providers/claudecode/: test_provider.py
tests/selector/: test_tiered_selector.py
tests/stdlib/: test_contracts.py  test_data_transformation.py  test_date_time.py  test_encoding_security.py  test_list_operations.py  test_math_numeric.py  test_string_processing.py  test_validation.py
tests/store/: test_blueprint_store.py
(+107 files in other folders)
