[project]
name = "bricks"
version = "0.1.1"
description = "Deterministic sequencing engine: typed Python building blocks composed into auditable YAML sequences."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Hemi", email = "hemi@example.com" },
]
keywords = ["sequencing", "automation", "bricks", "yaml", "workflow", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "mypy>=1.8",
    "ruff>=0.3",
]
ai = [
    "anthropic>=0.45",
]
benchmark = [
    "tiktoken>=0.5",
    "matplotlib>=3.7",
]

[project.scripts]
bricks = "bricks.cli.main:app"

[project.urls]
Homepage = "https://gitlab.com/hemi/bricks"
Repository = "https://gitlab.com/hemi/bricks"
Issues = "https://gitlab.com/hemi/bricks/-/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bricks*"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmark/tests"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "S",    # flake8-bandit (security)
    "PLC",  # pylint convention
    "PLE",  # pylint error
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLC0415"]
"benchmark/**/*.py" = ["S101", "PLC0415", "S607"]
"examples/**/*.py" = ["PLC0415"]
